[metadata]
name = fluentbingimg
summary = fluentbingimg library
version = 1.0
description_file =
    README.md
author = zbw
author_email = 2535463841@qq.com
home_page = https://github.com/2535463841/FluentUtils/tree/main/FluentBingImg

[files]
packages =
    fluentbingimg

[entry_points]
console_scripts =
    icoding-bingimg = fluentbingimg.cli:main
