[metadata]
name = fluentclient
summary = fluent utils client
version = 1.0
description_file =
    README.md
author = zbw
author_email = 2535463841@qq.com
home_page = https://github.com/2535463841/FluentUtils/tree/main/FluentClient

[files]
packages =
    fluentclient

[entry_points]
console_scripts =
    fluent-utils = fluentclient.cli:main
