[metadata]
name = fluentlib
summary = fluent utils library
version = 1.0
description_file =
    README.md
author = zbw
author_email = 2535463841@qq.com
home_page = https://github.com/2535463841/FluentUtils/tree/main/FluentLib

[files]
packages =
    fluentlib

[entry_points]
console_scripts =
    fluent-utils = fluentlib.cmd.base:main
    fluent-sshcp = fluentlib.cmd.sshcp:main
