[metadata]
name = icoding
summary = some utils
version = 1.0
description_file =
    README.md
author = zbw
author_email = 2535463841@qq.com
home_page = https://github.com/2535463841/FluentUtils/tree/main/ICoding

[files]
packages =
    icoding

[entry_points]
console_scripts =
    icoding-utils = icoding.cmd.base:main
    icoding-config = icoding.cmd.conf_editor:main
    icoding-qrcode = icoding.cmd.qrcode:main
    icoding-sshcp = icoding.cmd.sshcp:main
